feat: add model management, system config, quality filter and full-stack enhancements
- Add AI model provider/candidate management (CRUD + default/deep-thinking selection)
- Add system config service with frontend settings page
- Add QualityFilterPostProcessor to retrieval post-processing chain
- Add cancel/stop mechanism for streaming chat tasks
- Enhance SSE protocol with queue status and cancel events
- Add ModelManagementPage with provider & candidate table UI
- Update router with new admin pages (models, settings, users)
- Add modelService and settingsService frontend API layers
- Refactor infra-ai: routing LLM/embedding/rerank with circuit breaker
- Update Docker Compose configs for Milvus 2.6.6 compatibility
- Add database schema for model providers and system config tables
- Add integration test scaffolding and smoke test scripts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>